Medication Dispense now includes Dosage (#402)